--- a/index.html
+++ b/index.html
@@ -61,6 +61,132 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="wrap">
+            <div class="content-block">
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text1</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text2</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text3</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text4</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text5</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text6</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text7</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text8</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text9</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text10</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text11</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <img src="" alt="">
+                    <div class="cotent-info">
+                        <h3><a href="" class="content-info-link">Text12</a></h3>
+                        <div class="content-label"><span></span></div>
+                        <div class="content-text">
+                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="script/script.js"></script>
 </html>
