--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://use.fontawesome.com/8fae670fec.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -64,126 +65,147 @@
     <main>
         <div class="wrap">
             <div class="content-block">
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text1</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                <a href="file:///home/roman/Project/testHtml//detail.html" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-type">
+                            <div class="type-icon">
+                                <i class="fa fa-film" aria-hidden="true"></i>
+                            </div>
+                            <div class="type-discription">
+                                Moviess
+                            </div>
+                        </div>
+                        <div class="content-text">Обычный текст для контента бла awdadawd awd awdadaw dawdaadaw daw dawdaw dawdawdaw dawdwa daw dблаблаблабла</div>
+                        <div class="content-tags">
+                            Tags: loli, image, movie, movie, movie, movie, movie, movie
                         </div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text2</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-type">
+                            <div class="type-icon">
+                                <i class="fa fa-picture-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="type-discription">
+                                Manga
+                            </div>
                         </div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text3</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text4</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text5</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text6</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text7</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text8</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text9</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text10</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text11</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
+                </a>
+                <a href="" class="content-item">
+                    <div class="content-image">
+                        <img src="" data-src="img/img2.jpg" alt=""></div>
+                    <div class="content-info">
+                        <div class="content-title">Обычный заголовок для контента</div>
+                        <div class="content-text">Обычный текст для контента блаблаблаблабла</div>
                     </div>
-                </div>
-                <div class="content-item">
-                    <img src="" alt="">
-                    <div class="cotent-info">
-                        <h3><a href="" class="content-info-link">Text12</a></h3>
-                        <div class="content-label"><span></span></div>
-                        <div class="content-text">
-                            awdawdawdawdawdawdawdawdawdadadadawdawwda   
-                        </div>
-                    </div>
-                </div>
+                </a>
+            </div>
+            <li class="pagination-content">
+                <ul class="pagination-list">
+                    <li class="pre-pagination-item">
+                        <a href="#"><</a>
+                    </li>
+                    <li class="pagination-item active">
+                        <a href="#">1</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">2</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">3</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">4</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">5</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">6</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">7</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#">8</a>
+                    </li>
+                    <li class="post-pagination-item">
+                        <a href="#">></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </main>
