--- a/detail.html
+++ b/detail.html
@@ -87,7 +87,75 @@
                 
             </div>
             <div class="comment-post">
-                
+                <form method="POST" class="comment-form">
+                    <h3 class="comment-title">Комментарии</h3>
+                    <div class="content-form">
+                        <textarea placeholder="Оставте свой комментарий" name="content"></textarea>
+                        <button type="submit">Отправить</button>
+                    </div>
+                </form>
+                <div class="comment-list">
+                    <div class="comment-item">
+                        <div class="item-info">
+                            <img src="img/user-pic.png" alt="" class="comment-avatar">
+                            <div class="comment-name">Ipsums</div>
+                        </div>
+                        <div class="comment-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eaque, officia doloremque? Sit, quisquam eos et perferendis
+                            unde officia, consequuntur cum sed nemo, pariatur ducimus porro dignissimos
+                             debitis magni fuga at?
+                        </div>
+                    </div>
+                    <div class="comment-item">
+                        <div class="item-info">
+                            <img src="img/user-pic.png" alt="" class="comment-avatar">
+                            <div class="comment-name">Ipsums</div>
+                        </div>
+                        <div class="comment-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eaque, officia doloremque? Sit, quisquam eos et perferendis
+                            unde officia, consequuntur cum sed nemo, pariatur ducimus porro dignissimos
+                             debitis magni fuga at?
+                        </div>
+                    </div>
+                    <div class="comment-item">
+                        <div class="item-info">
+                            <img src="img/user-pic.png" alt="" class="comment-avatar">
+                            <div class="comment-name">Ipsums</div>
+                        </div>
+                        <div class="comment-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eaque, officia doloremque? Sit, quisquam eos et perferendis
+                            unde officia, consequuntur cum sed nemo, pariatur ducimus porro dignissimos
+                             debitis magni fuga at?
+                        </div>
+                    </div>
+                    <div class="comment-item">
+                        <div class="item-info">
+                            <img src="img/user-pic.png" alt="" class="comment-avatar">
+                            <div class="comment-name">Ipsums</div>
+                        </div>
+                        <div class="comment-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eaque, officia doloremque? Sit, quisquam eos et perferendis
+                            unde officia, consequuntur cum sed nemo, pariatur ducimus porro dignissimos
+                             debitis magni fuga at?
+                        </div>
+                    </div>
+                    <div class="comment-item">
+                        <div class="item-info">
+                            <img src="img/user-pic.png" alt="" class="comment-avatar">
+                            <div class="comment-name">Ipsums</div>
+                        </div>
+                        <div class="comment-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eaque, officia doloremque? Sit, quisquam eos et perferendis
+                            unde officia, consequuntur cum sed nemo, pariatur ducimus porro dignissimos
+                             debitis magni fuga at?
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
