done pre detail view

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
         <div class="wrap">
             <div class="content-block">
-                <a href="file:///home/roman/Project/testHtml//detail.html" class="content-item">
+                <a href="file:///home/roman/Project/testHtml/pre-detail.html" class="content-item">
                     <div class="content-image">
                         <img src="" data-src="img/img2.jpg" alt=""></div>
                     <div class="content-info">
@@ -173,7 +173,7 @@
                     </div>
                 </a>
             </div>
-            <li class="pagination-content">
+            <div class="pagination-content">
                 <ul class="pagination-list">
                     <li class="pre-pagination-item">
                         <a href="#"><</a>
