--- a/detail.html
+++ b/detail.html
@@ -64,7 +64,77 @@
     </header>
     <main>
         <div class="wrap">
-            
+            <div class="gallery-block">
+                <a href="#" class="gallery-item" data-title="1 страница">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item" data-title="8 страница">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+                <a href="" class="gallery-item">
+                    <img src="img/img2.jpg" alt="" class="gallery-image">
+                </a>
+            </div>
         </div>
     </main>
 </body>
