--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
     </header>
     <main>
         <div class="wrap">
+            <div class="breadcrumbs">
+                <div class="breadcrubs-element">
+                    <a href="">Гланая</a>
+                </div>
+                <div class="breadcrubs-element">
+                    <a href="">Детальная</a>
+                </div>
+                <div class="breadcrubs-element">
+                    <a href="">Name</a>
+                </div>
+            </div>
             <div class="content-block">
                 <a href="file:///home/roman/Project/testHtml/pre-detail.html" class="content-item">
                     <div class="content-image">
